--- a/ui/src/app/shared/components/prescription/prescription.component.scss
+++ b/ui/src/app/shared/components/prescription/prescription.component.scss
@@ -5,3 +5,13 @@
 .add-drug-button {
   float: right;
 }
+
+.active-dosage-warning {
+  background-color: #fff3cd;
+  color: #856404;
+  border: 1px solid #ffeeba;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 4px;
+  font-size: 14px;
+}
